whoami/whoami-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.local`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: app-tls
